# Medical-Database

./: README.md
Medical-Database-main/: CMakeLists.txt  DBQueries.txt  README.md  User.h  config.json  main.cpp  setup.sql  vcpkg-configuration.json  vcpkg.json
Medical-Database-main/Controllers/: Admit.cpp  Admit.h  BillingController.cpp  BillingController.h  LabsController.cpp  LabsController.h  Login.cpp  Login.h  Orders.cpp  Orders.h  TestsController.cpp  TestsController.h
Medical-Database-main/DBQuery/: AdmitDB.cpp  AdmitDB.h  BillingDB.cpp  BillingDB.h  LabsDB.cpp  LabsDB.h  LoginDB.cpp  LoginDB.h  OrdersDB.cpp  OrdersDB.h  TestsDB.cpp  TestsDB.h
Medical-Database-main/LogicOps/: AdmitLogic.cpp  AdmitLogic.h  BillingLogic.cpp  BillingLogic.h  LabsLogic.cpp  LabsLogic.h  LoginLogic.cpp  LoginLogic.h  OrdersLogic.cpp  OrdersLogic.h  TestsLogic.cpp  TestsLogic.h
Medical-Database-main/custom-ports/drogon/: 0005-disable-ssl-verify.patch  portfile.cmake
Medical-Database-main/custom-ports/libmariadb/: portfile.cmake  vcpkg.json
Medical-Database-main/frontend/: admit.html  auth.js  billing.html  index.css  index.html  index.js  labs.html  orders.html  styling.css  tests.html
